Fix overflow of Terminal

--- a/src/components/Terminal/terminal.module.css
+++ b/src/components/Terminal/terminal.module.css
@@ -1,13 +1,12 @@
 .terminal {
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: fit-content;
   padding: 15px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  overflow-y: auto;
-  overflow-x: hidden;
   overflow-wrap: break-word;
 }
 
